fdo#45394 fix RTF import of tables with empty first row

Additionally the table should be at the start of the document to trigger
this bug.
(cherry picked from commit b475bc459d0406c9211c7be69973f310949a45a6)

Signed-off-by: Michael Stahl <mstahl@redhat.com>